--- a/1_GraphicalCalculator/MainWindow.xaml
+++ b/1_GraphicalCalculator/MainWindow.xaml
@@ -10,9 +10,12 @@
         <Style TargetType="Button">
             <Setter Property="Background" Value="White"></Setter>
             <Setter Property="FontSize" Value="70"></Setter>
+            <Setter Property="Background" Value="Gray"></Setter>
+            <Setter Property="Foreground" Value="White"></Setter>
         </Style>
-        <Style TargetType="TextBlock">
+        <Style TargetType="TextBox">
             <Setter Property="FontSize" Value="70"></Setter>
+            <Setter Property="Foreground" Value="DarkSlateGray"></Setter>
         </Style>
     </Window.Resources>
     <Grid x:Name="Container">
@@ -29,27 +32,28 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="112" Width="472" Grid.ColumnSpan="3"/>
-        <Button Grid.Column="0" Grid.Row="1" Content="+"></Button>
-        <Button Grid.Column="1" Grid.Row="1" Content="-"></Button>
-        <Button Grid.Column="2" Grid.Row="1" Content="*"></Button>
-        <Button Grid.Column="3" Grid.Row="1" Content="/"></Button>
+        <Button Grid.Column="0" Grid.Row="1" Content="+" Click="Button_Click"></Button>
+        <Button Grid.Column="1" Grid.Row="1" Content="-" Click="Button_Click"></Button>
+        <Button Grid.Column="2" Grid.Row="1" Content="*" Click="Button_Click"></Button>
+        <Button Grid.Column="3" Grid.Row="1" Content="/" Click="Button_Click"></Button>
+
+        <Button Grid.Column="0" Grid.Row="2" Content="9" Click="Button_Click"></Button>
+        <Button Grid.Column="1" Grid.Row="2" Content="8" Click="Button_Click"></Button>
+        <Button Grid.Column="2" Grid.Row="2" Content="7" Click="Button_Click"></Button>
+        <Button Grid.Column="3" Grid.Row="2" Content="6" Click="Button_Click"></Button>
+
+        <Button Grid.Column="0" Grid.Row="3" Content="5" Click="Button_Click"></Button>
+        <Button Grid.Column="1" Grid.Row="3" Content="4" Click="Button_Click"></Button>
+        <Button Grid.Column="2" Grid.Row="3" Content="3" Click="Button_Click"></Button>
+        <Button Grid.Column="3" Grid.Row="3" Content="2" Click="Button_Click"></Button>
+
+        <Button Grid.Column="0" Grid.Row="4" Content="1" Click="Button_Click"></Button>
+        <Button Grid.Column="1" Grid.Row="4" Content="0" Click="Button_Click"></Button>
+        <Button Grid.Column="2" Grid.Row="4" Content="C" Click="Button_Click"></Button>
+        <Button Grid.Column="3" Grid.Row="4" Content="=" Click="Button_Click"></Button>
         
-        <Button Grid.Column="0" Grid.Row="2" Content="9"></Button>
-        <Button Grid.Column="1" Grid.Row="2" Content="8"></Button>
-        <Button Grid.Column="2" Grid.Row="2" Content="7"></Button>
-        <Button Grid.Column="3" Grid.Row="2" Content="6"></Button>   
-        
-        <Button Grid.Column="0" Grid.Row="3" Content="5"></Button>
-        <Button Grid.Column="1" Grid.Row="3" Content="4"></Button>
-        <Button Grid.Column="2" Grid.Row="3" Content="3"></Button>
-        <Button Grid.Column="3" Grid.Row="3" Content="2"></Button>
-        
-        <Button Grid.Column="0" Grid.Row="4" Content="1"></Button>
-        <Button Grid.Column="1" Grid.Row="4" Content="0"></Button>
-        <Button Grid.Column="2" Grid.Row="4" Content="C"></Button>
-        <Button Grid.Column="3" Grid.Row="4" Content="="></Button>
-        
+        <TextBox x:Name="Display" Grid.ColumnSpan="4" HorizontalAlignment="Left" Height="154" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="492"/>
+
 
     </Grid>
 </Window>
