--- a/1_GraphicalCalculator/MainWindow.xaml
+++ b/1_GraphicalCalculator/MainWindow.xaml
@@ -32,10 +32,10 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Button Grid.Column="0" Grid.Row="1" Content="+" Click="Button_Click"></Button>
-        <Button Grid.Column="1" Grid.Row="1" Content="-" Click="Button_Click"></Button>
-        <Button Grid.Column="2" Grid.Row="1" Content="*" Click="Button_Click"></Button>
-        <Button Grid.Column="3" Grid.Row="1" Content="/" Click="Button_Click"></Button>
+        <Button Grid.Column="0" Grid.Row="1" Content="+" Click="Button_Click_operator"></Button>
+        <Button Grid.Column="1" Grid.Row="1" Content="-" Click="Button_Click_operator"></Button>
+        <Button Grid.Column="2" Grid.Row="1" Content="*" Click="Button_Click_operator"></Button>
+        <Button Grid.Column="3" Grid.Row="1" Content="/" Click="Button_Click_operator"></Button>
 
         <Button Grid.Column="0" Grid.Row="2" Content="9" Click="Button_Click"></Button>
         <Button Grid.Column="1" Grid.Row="2" Content="8" Click="Button_Click"></Button>
@@ -49,8 +49,8 @@
 
         <Button Grid.Column="0" Grid.Row="4" Content="1" Click="Button_Click"></Button>
         <Button Grid.Column="1" Grid.Row="4" Content="0" Click="Button_Click"></Button>
-        <Button Grid.Column="2" Grid.Row="4" Content="C" Click="Button_Click"></Button>
-        <Button Grid.Column="3" Grid.Row="4" Content="=" Click="Button_Click"></Button>
+        <Button Grid.Column="2" Grid.Row="4" Content="C" Click="Button_Click_clear"></Button>
+        <Button Grid.Column="3" Grid.Row="4" Content="=" Click="Button_Click_result"></Button>
         
         <TextBox x:Name="Display" Grid.ColumnSpan="4" HorizontalAlignment="Left" Height="154" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="492"/>
 
